# py-tofspec

./: .gitignore  README.md  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  test.ipynb
.github/workflows/: build-and-deploy-docs.yml  release-to-pypi.yml  test-and-report.yml
_sources/api/: cli.rst.txt
_sources/usage/: label.rst.txt  merge.rst.txt
api/: cli.html  index.html
contributing/: contributing.html
docs/: api.rst  conf.py  index.rst  installation.rst
docs/api/: index.rst
docs/contributing/: contributing.rst
docs/notes/: index.rst  isomers.rst  substructures.rst
docs/usage/: concat.rst  config.rst  integrate-peaks.rst  label.rst  load.rst  merge.rst  user_guide.rst
notes/: index.html  isomers.html  substructures.html
paper/: paper.bib  paper.md
tests/: test_concat.py  test_config.py  test_integrate_peaks.py  test_label.py  test_load.py  test_merge.py  test_metadata_integration.py  test_timeseries.py  test_tofspec.py  test_vocus.py
tests/datafiles/: V3_15s.h5  long.csv  pid.csv  short.csv  test.csv  test_compounds.csv  test_compounds_mf.csv  test_config_ion.csv  test_config_mf.csv  test_config_smiles.csv  timeseries.csv
tofspec/: load.py  models.py  utils.py
tofspec/cli/: __init__.py
tofspec/config/: grouping.yml  mass_list2.yml  peak-list.yml  voc_db.yml
usage/: concat.html  config.html  integrate-peaks.html  label.html  load.html  merge.html  user_guide.html
vocus/: __init__.py  integrate.py  models.py  test.ipynb  utils.py
vocus/cli/: __init__.py
(+14 files in other folders)
