[tool.poetry]
name = "vocus"
version = "0.1.0"
description = ""
authors = ["Joe Palmo <jpalmo21@amherst.edu>"]
include = ["*.yml"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
numpy = "^1.22.3"
pandas = "^1.4.1"
click = "^8.0.4"
h5py = "^3.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
