[tool.poetry]
name = "vocus"
version = "0.1.0"
description = ""
authors = ["Joe Palmo <jpalmo21@amherst.edu>"]
include = ["*.yml"]
packages = [
    { include="vocus", from="." }
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
numpy = "^1.22.3"
pandas = "^1.4.1"
click = "^8.0.4"
h5py = "^3.6.0"
pyarrow = "^7.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^6.3.2"
pytest-coverage = "^0.0"
Sphinx = "^4.4.0"
toml = "^0.10.2"
furo = "^2022.3.4"
sphinx-copybutton = "^0.5.0"
myst-parser = "^0.17.0"
numpydoc = "^1.2"


[tool.poetry.scripts]
vocus = "vocus.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
